# pants

./: .crates.toml  .crates2.json  Cargo.toml  Dockerfile  README.md  eh  run.sh
src/: add.rs  index.rs  main.rs
templates/: base.html.tera  index.html.tera
