[package]
name = "pants"
version = "0.1.0"
authors = ["Daniel Porteous <danielporteous1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A web app to save anything to Pocket"
readme = "README.md"
homepage = "https://github.com/dport/pants"
repository = "https://github.com/dport/pants"

[dependencies]
rocket = "0.4"
tera = "0.11"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.3"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates", "serve"]
