[package]
name = "pants"
version = "0.1.2"
authors = ["Daniel Porteous <danielporteous1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A web app to save anything to Pocket"
readme = "README.md"
homepage = "https://github.com/dport/pants"
repository = "https://github.com/dport/pants"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
rocket = "0.4.10"
tera = "1.12.1"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
structopt = "0.3.23"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["tera_templates", "serve"]
