[package]
name = "pants"
version = "0.1.2"
authors = ["Daniel Porteous <danielporteous1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A web app to save anything to Pocket"
readme = "README.md"
homepage = "https://github.com/dport/pants"
repository = "https://github.com/dport/pants"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
tera = "1.12.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
structopt = "0.3.23"

